--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+*{
+  color: #F5F5F5;
+}
+
 body {
     margin: 0;
     background-color: black;
@@ -14,7 +18,7 @@ body {
 .logo {
     font-size: 3rem;
     font-weight: bold;
-    color: white;
+    color: #F5F5F5;
     font-family: "EB Garamond", serif;
     font-optical-sizing: auto;
     font-weight: <weight>;
@@ -22,7 +26,7 @@ body {
 }
 
 .heading{
-  color:#00796b;
+  color:#C2185B;
   margin-top: 30px;
   margin-left: 50px;
   font-size: 2rem;
@@ -68,7 +72,7 @@ body {
 }
 
 .playlist p{
-  color: white;
+  color: #F5F5F5;
 }
   
 .playlist img {
@@ -150,33 +154,82 @@ a {
   margin: 5px;
 }
 
-.flashcard {
-  display: none; /* Initially hidden */
+.floating-player {
   position: fixed;
   top: 50%;
   left: 50%;
+  width: 150px;
+  height: 230px;
   transform: translate(-50%, -50%);
-  background: white;
-  padding: 20px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  background:#00796b;
+  padding: 15px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  display: none;
   text-align: center;
+}
+
+.floating-player img {
+  width: 100px;
+  height: 100px;
   border-radius: 10px;
 }
 
-.flashcard-content {
-  position: relative;
-  width: 300px;
+.controls {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
 }
 
-.flashcard img {
-  width: 100%;
-  border-radius: 10px;
-}
-
-.close-btn {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  font-size: 24px;
+.controls button {
+  background: none;
+  border: none; /* Border color (optional) * /* Button icon color */
+  font-size: 20px; /* Adjust size if necessary */
+  padding: 10px;
   cursor: pointer;
+  transition: background 0.3s ease, border-color 0.3s ease;
+  color: #C2185B;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.blur {
+  filter: blur(5px);
+}
+
+#progress-bar {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 5px;
+  background: #C2185B;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+}
+
+/* Styling for the progress knob (thumb) */
+#progress-bar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  background: #C2185B;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+#progress-bar::-moz-range-thumb {
+  width: 12px;
+  height: 12px;
+  background: #C2185B;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.description{
+  color: #C2185B ;
 }
